# FundVal-Live

./: README.md  backend.spec  package-lock.json  package.json  pyproject.toml  start.sh  stop.sh
.github/workflows/: build.yml
backend/: requirements.txt
backend/app/: auth.py  config.py  db.py  main.py  utils.py
backend/app/routers/: account.py  ai.py  auth.py  data.py  funds.py  settings.py
backend/app/services/: account.py  ai.py  data_io.py  email.py  fund.py  prompts.py  scheduler.py  subscription.py  trade.py
electron/: main.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AiAnalysis.jsx  FundCard.jsx  IntradayChart.jsx  PortfolioChart.jsx  PromptModal.jsx  TradeModal.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/hooks/: usePositions.js
frontend/src/pages/: Account.jsx  FundDetail.jsx  FundList.jsx  Settings.jsx
frontend/src/services/: api.js
