[project]
name = "fund-val-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ye-Yu-Mo", email = "2908156919@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.18.21",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.4",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.128.0",
    "langchain-openai>=1.1.7",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.10"]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
